Fix imports and queries logic